# Hairloss-report

./: .gitignore  README.md  checkNaming.sh  flake.nix  gallery.tex  hairlineResults.json  pyproject.toml  rename.sh
hairloss/: evaluate.py  gallery.py  main.py  visuals.py
