[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hairloss"
version = "0.1"
description = "Hairloss graph over time."
requires-python = ">=3.10"
dependencies = [
  "tinydb",
  "requests",
  "matplotlib",
  "numpy",
  "scipy"
]

[project.scripts]
hairloss = "hairloss.main:main"

[tool.setuptools]
packages = ["hairloss"]
